--- a/.env
+++ b/.env
@@ -9,3 +9,10 @@ TESTING = False                                           # True or False.
 # ----------------
 WTF_CSRF_SECRET_KEY = '$=H}j62u&SyJCy,JGELHx&3$jr6`>T3Y'  # Needed by Flask WTForms to combat cross-site request forgery.
 
+# Database variables
+# ------------------
+SQLALCHEMY_DATABASE_URI = 'sqlite:///covid-19.db'         # Database URI
+SQLALCHEMY_ECHO = True                                    # echo SQL statements when working with database
+
+# Repository selection variable
+REPOSITORY = 'database'                                   # 'memory' or 'database'
